compile.log

> Task :compileJava FAILED
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\mod\ModInitializer.java:21: error: interface PulseMod is public, should be declared in a file named PulseMod.java
public interface PulseMod extends PulseMod {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\mod\PulseMod.java:16: error: duplicate class: com.pulse.mod.PulseMod
public interface PulseMod {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenClassTracker.java:12: error: class PulseClassTracker is public, should be declared in a file named PulseClassTracker.java
public class PulseClassTracker implements IClassTracker {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenDefineClassTransformer.java:8: error: class PulseDefineClassTransformer is public, should be declared in a file named PulseDefineClassTransformer.java
public class PulseDefineClassTransformer implements ClassFileTransformer {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenGameClassTracker.java:8: error: class PulseGameClassTracker is public, should be declared in a file named PulseGameClassTracker.java
public class PulseGameClassTracker implements ClassFileTransformer {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenGlobalPropertyService.java:13: error: class PulseGlobalPropertyService is public, should be declared in a file named PulseGlobalPropertyService.java
public class PulseGlobalPropertyService implements IGlobalPropertyService {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenLogger.java:9: error: class PulseLogger is public, should be declared in a file named PulseLogger.java
public class PulseLogger implements ILogger {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenMixinServiceBootstrap.java:12: error: class PulseMixinServiceBootstrap is public, should be declared in a file named PulseMixinServiceBootstrap.java
public class PulseMixinServiceBootstrap implements IMixinServiceBootstrap {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenPlatformAgent.java:9: error: class PulsePlatformAgent is public, should be declared in a file named PulsePlatformAgent.java
public class PulsePlatformAgent extends MixinPlatformAgentAbstract {
       ^
C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenTransformerProvider.java:19: error: class PulseTransformerProvider is public, should be declared in a file named PulseTransformerProvider.java
public class PulseTransformerProvider implements ITransformerProvider {
       ^
Note: C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\PulseMixinService.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors

[Incubating] Problems report is available at: file:///C:/Users/MW/Downloads/coding/Mutagen/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\PulseMixinService.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\mod\PulseMod.java:16: error: duplicate class: com.pulse.mod.PulseMod
  public interface PulseMod {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\mod\ModInitializer.java:21: error: interface PulseMod is public, should be declared in a file named PulseMod.java
  public interface PulseMod extends PulseMod {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenClassTracker.java:12: error: class PulseClassTracker is public, should be declared in a file named PulseClassTracker.java
  public class PulseClassTracker implements IClassTracker {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenDefineClassTransformer.java:8: error: class PulseDefineClassTransformer is public, should be declared in a file named PulseDefineClassTransformer.java
  public class PulseDefineClassTransformer implements ClassFileTransformer {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenGameClassTracker.java:8: error: class PulseGameClassTracker is public, should be declared in a file named PulseGameClassTracker.java
  public class PulseGameClassTracker implements ClassFileTransformer {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenGlobalPropertyService.java:13: error: class PulseGlobalPropertyService is public, should be declared in a file named PulseGlobalPropertyService.java
  public class PulseGlobalPropertyService implements IGlobalPropertyService {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenLogger.java:9: error: class PulseLogger is public, should be declared in a file named PulseLogger.java
  public class PulseLogger implements ILogger {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenMixinServiceBootstrap.java:12: error: class PulseMixinServiceBootstrap is public, should be declared in a file named PulseMixinServiceBootstrap.java
  public class PulseMixinServiceBootstrap implements IMixinServiceBootstrap {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenPlatformAgent.java:9: error: class PulsePlatformAgent is public, should be declared in a file named PulsePlatformAgent.java
  public class PulsePlatformAgent extends MixinPlatformAgentAbstract {
         ^
  C:\Users\MW\Downloads\coding\Mutagen\src\main\java\com\pulse\service\MutagenTransformerProvider.java:19: error: class PulseTransformerProvider is public, should be declared in a file named PulseTransformerProvider.java
  public class PulseTransformerProvider implements ITransformerProvider {
         ^
  10 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
1 actionable task: 1 executed
